@@ -1,3 +1,5 @@
+2006/1/17 -- released version 20060117_trunk
+
 2006/1/16 -- released version 20060116_trunk
 
 2006/1/15 -- released version 20060115_trunk
